fixed spacing issue

--- a/imports/ui/css/App.css
+++ b/imports/ui/css/App.css
@@ -191,6 +191,5 @@ nav {
 @media (min-width: 992px) {
   .sticky{
     position: sticky;
-    top: 75px;
   }
 }
